--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bepalo/time",
-  "version": "1.2.6",
+  "version": "1.2.7",
   "description": "A fluent time expression utility library to use like `Time.in(1).Week`",
   "author": "Natnael Eshetu",
   "license": "MIT",
@@ -11,17 +11,22 @@
   "homepage": "https://github.com/bepalo/time#readme",
   "exports": {
     "import": "./dist/index.js",
-    "require": "./dist/cjs/index.js",
-    "types": "./dist/index.d.ts"
+    "require": "./dist/cjs/index.js"
   },
   "main": "./dist/cjs/index.js",
   "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
+  "files": [
+    "dist/",
+    "LICENSE",
+    "README.md"
+  ],
   "scripts": {
     "build:esm": "tsc --project tsconfig.esm.json",
     "build:cjs": "tsc --project tsconfig.cjs.json",
-    "build": "npm run build:esm && npm run build:cjs",
-    "prepare": "npm run build",
+    "build": "pnpm run build:esm && pnpm run build:cjs",
+    "build:watch": "tsc --watch --project tsconfig.esm.json & tsc --watch --project tsconfig.cjs.json",
+    "prepare": "pnpm run build",
     "test": "vitest --reporter=dot",
     "test:ci": "vitest run --reporter=vitest-markdown-reporter --outputFile=test-result.md"
   },
@@ -29,7 +34,10 @@
     "time",
     "timestamp",
     "duration",
+    "fluent",
     "express",
+    "expression",
+    "time expression",
     "utility",
     "jsonwebtoken"
   ],
