--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,9 +3,9 @@ name: CI
 
 on:
   push:
-    branches: [main]
-  pull_request:
-    branches: [main]
+    tags:
+      - "release-*"
+      - "v[0-9]+.[0-9]+.[0-9]+"
 
 jobs:
   build:
@@ -30,8 +30,12 @@ jobs:
       - name: Build package
         run: pnpm build
 
+      - name: Run tests
+        run: pnpm test
+
       - name: Publish to npm
-        run: pnpm publish --provenance --access public
+        if: startsWith(github.ref, 'refs/tags/v')
+        run: pnpm publish --provenance --access public --no-git-checks
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
